Add page content and form for downloading the product

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+	<head>
+		<meta charset="utf-8">
+		<title>Página de vendas</title>
+		<style>
+h1{
+font-family: Arial;
+font-size: 42px;
+color: blue;
+text-align: center;}
 
-</head>
+form{
+font-size: 20px;
+text-align: center;
+}
+		</style>
+	</head>
+	<body>
+		<header id="cabecalho">
+		<div id="interface">
+	<h1>Página de vendas</h1>
+	<form method="post" id=fContato" action="mailto:alexysmcf@gmail.com">
+	<fieldset id="usuario"><legend>Identificação do Usuário</legend>
+		<p><label for="cNome">Nome:<input type="text" name=tNome"" id="cNome"/></p>
+			<p><label for="cSobreNome">Sobrenome:<input type="text" name=tSobreNome"" id="cSobreNome"/></p>
+				<p><label for="cmail">E-mail:<input type="email" name=tmail"" id="cmail"/></p>
+	<input type="submit" value="DOWNLOAD"/>
+	</fieldset>
+	</form>
 
-<body>
-
-</body>
-
-
+		</header>
+		</div>
+	</body>
 </html>
